// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No mapContextToProps Provide & connect, mixin up with own prop without mapContextToProps 1`] = `
<ContextProvider>
  <ProxyComponent>
    <ContextProxyComponent
      ownPropMessage="Hello, Provider!"
    >
      <ContextConnector
        @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
          Array [
            Object {
              "message": "Hello, Child!",
            },
            Object {
              "ownPropMessage": "Hello, Provider!",
            },
          ]
        }
      >
        <ContextLowerProxyComponent
          @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
            Array [
              Object {
                "message": "Hello, Child!",
              },
              Object {
                "ownPropMessage": "Hello, Provider!",
              },
            ]
          }
          message="Hello, Child!"
        >
          <Component
            message="Hello, Child!"
            ownPropMessage="Hello, Provider!"
          >
            <div>
              Hello, Child!
              ,
              Hello, Provider!
            </div>
          </Component>
        </ContextLowerProxyComponent>
      </ContextConnector>
    </ContextProxyComponent>
  </ProxyComponent>
</ContextProvider>
`;

exports[`connect Composition mount 1`] = `
<ContextProvider>
  <Component>
    <Provider
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <ContextProxyComponent>
        <Connect(ContextLowerProxyComponent)
          @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
            Array [
              Object {
                "selector": [Function],
              },
              Object {},
            ]
          }
        >
          <ContextLowerProxyComponent
            @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
              Array [
                Object {
                  "selector": [Function],
                },
                Object {},
              ]
            }
            data={124816}
            dispatch={[Function]}
          >
            <Component
              data={124816}
              dispatch={[Function]}
            >
              <div>
                Selected: 
                124816
              </div>
            </Component>
          </ContextLowerProxyComponent>
        </Connect(ContextLowerProxyComponent)>
      </ContextProxyComponent>
    </Provider>
  </Component>
</ContextProvider>
`;

exports[`connect Standalone Child rendered well 1`] = `
<Connect(ContextLowerProxyComponent)
  @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
    Array [
      Object {
        "selector": undefined,
      },
      Object {},
    ]
  }
/>
`;

exports[`connectContext, createProvider Provide & connect, mixin up with own prop 1`] = `
<ContextProvider>
  <ProxyComponent>
    <ContextProxyComponent
      ownPropMessage="Hello, Provider!"
    >
      <ContextConnector
        @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
          Array [
            Object {
              "message": "Hello, Child!",
            },
            Object {
              "ownPropMessage": "Hello, Provider!",
            },
          ]
        }
      >
        <ContextLowerProxyComponent
          @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
            Array [
              Object {
                "message": "Hello, Child!",
              },
              Object {
                "ownPropMessage": "Hello, Provider!",
              },
            ]
          }
          contextMessage="Hello, Child!"
        >
          <Component
            contextMessage="Hello, Child!"
            ownPropMessage="Hello, Provider!"
          >
            <div>
              Hello, Child!
              ,
              Hello, Provider!
            </div>
          </Component>
        </ContextLowerProxyComponent>
      </ContextConnector>
    </ContextProxyComponent>
  </ProxyComponent>
</ContextProvider>
`;
